[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Entities/enemy_shoot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Enemy_Shoot.gd" type="Script" id=2]
[ext_resource path="res://Images/Effects/light.png" type="Texture" id=3]
[ext_resource path="res://Sons/Entities/shield.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.812081, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
resource_name = " BouclierPop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.09, 0.09 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = " BouclierPop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.09, 0.09 ) ]
}

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.57047, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.621818 )
colors = PoolColorArray( 1, 0.65625, 0, 1, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 25 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 9.11026, -21.6831, 11.9087, -22.0626, 14.5845, -21.1335, 17, -19.3497, 19.5271, -15.9307, 21.2366, -11.434, 21.2737, -8.45597, 20.0474, -6.15188, 16.6284, -1.57065, 16.2939, -0.455768, 16.4426, 0.361813, 21.9798, 8.31463, 19.6386, 11.7168, 12.1689, 19.0006, 7.33773, 22.4568, 5.33094, 21.8993, 5.18229, 19.9669, 6.03703, 13.835, 5.40821, 10.9685, 3.13834, 12.8316, -0.057651, 13.5006, -3.47368, 12.678, -5.22033, 10.7455, -5.92642, 12.9009, -5.03452, 20.0362, -5.36898, 22.043, -7.63591, 22.1545, -11.8353, 19.2186, -19.9368, 11.3029, -21.7577, 8.51573, -20.3456, 5.90927, -16.109, 0.14905, -16.332, -1.42702, -21.126, -7.93049, -21.2746, -11.0814, -19.305, -16.1726, -17.1124, -19.0342, -13.6934, -21.7099, -11.7609, -22.1187, -9.23388, -21.4497, -10.163, -17.7706, -9.34537, -15.3551, -7.18994, -12.5679, -3.88245, -10.4496, -0.054697, -9.63201, 5.96566, -11.5645, 9.49612, -15.9497, 10.0536, -17.9936 )

[node name="Enemy_Shoot" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
h_speed = 100

[node name="Boubou" type="Sprite" parent="."]
modulate = Color( 0.290196, 0.415686, 0.980392, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="BoubouP" type="CPUParticles2D" parent="Boubou"]
modulate = Color( 0, 0.717647, 1, 1 )
z_index = -1
amount = 15
lifetime = 3.0
randomness = 1.0
lifetime_randomness = 0.69
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 179.48
scale_amount = 0.0
scale_amount_random = 0.34
scale_amount_curve = SubResource( 1 )

[node name="BoubouA" type="AudioStreamPlayer" parent="Boubou"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Pop" type="AnimationPlayer" parent="Boubou"]
"anims/ BouclierPop" = SubResource( 2 )
anims/BouclierPop = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 1 )

[node name="Trail" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
scale = Vector2( 11.1111, 11.1111 )
lifetime = 0.5
lifetime_randomness = 0.1
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 0.01
scale_amount_random = 0.01
scale_amount_curve = SubResource( 8 )
color_ramp = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 12.2267, -22.1766, 14.8253, -20.904, 17.1876, -19.1843, 19.7075, -15.7069, 21.1249, -11.861, 21.2824, -8.6198, 21.6761, 8.46788, 18.9988, 12.4127, 12.7779, 18.5548, 7.42323, 22.4082, -7.45959, 22.2507, -12.1055, 18.8673, -19.9013, 11.3078, -21.8699, 8.47034, -21.24, -11.0584, -19.2713, -16.2556, -16.9877, -19.1716, -13.523, -21.7702, -11.6331, -22.0852 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 170

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.3
color = Color( 1, 0.290196, 0.290196, 1 )

[node name="EnemySFX" type="AudioStreamPlayer2D" parent="."]

[node name="Fire Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Fire Timer" to="." method="_on_Fire_Timer_timeout"]
